--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 *.gem
-.bundle
-Gemfile.lock
-pkg/*
+*.rbc
 *.swp
+.bundle
+.config
+.DS_Store
+.yardoc
+Gemfile.lock
+InstalledFiles
+_yardoc
+coverage
+doc/
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
