Running various ruby versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,18 @@
 services: mongodb
+sudo: false                                                                                                   
+
+language: ruby                                                                                                
+
+cache: bundler                                                                                                
+
+rvm:                                                                                                          
+  - 2.2                                                                                                       
+  - 2.1.1                                                                                                     
+  - 2.0.0                                                                                                     
+  - 1.9.3                                                                                                     
+
+env:                                                                                                          
+  - MONGOID_VERSION=2                                                                                         
+  - MONGOID_VERSION=3                                                                                         
+  - MONGOID_VERSION=4                                                                                         
+  - MONGOID_VERSION=5 
